[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

# Simple Notary server
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
p256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1.33.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tracing-subscriber = "0.3.17"

# Prover
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
hyper = { version = "0.14", features = ["client", "http1"] }
serde_json = "1.0.107"
futures = "0.3.28"

# Verifier
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
chrono = "0.4.31"

tlsn-substrings-verifier = { path = "../tlsn-substrings-verifier" }
hashbrown = "0.14.3"